tests/NormalTests/paczka1/fuzzy1/99695645.err
Error in line 4: 3GAEwh9Jd A907 7,4
Error in line 1: X5UeDw A907 74,4
Error in line 9: 4RCM0YUhE9 S457 16,9
Error in line 10: 4RCM0YUhE9 A830 716,3
Error in line 11: 4RCM0YUhE9 A907 71,3
Error in line 3: Sncgt A830 85,9
Error in line 29: S457 S457 -5,4
Error in line 31: 3GAEwh9Jd A907 -1,6
Error in line 18: Sncgt A907 71,7
Error in line 27: S457 S457 92,4
